--- a/exoticar/index.html
+++ b/exoticar/index.html
@@ -12,7 +12,9 @@
 	<body>
 		<header class="page-header">
 			<div class="wrapper">
-				<div class="logo"></div>
+				<div class="logo">
+					<img class="logo-img" src="images/logo.png" alt="logo">
+				</div>
 				<nav class="main-nav">
 					<ul>
 						<li><a href="#">Home</a></li>
@@ -26,10 +28,13 @@
 		</header>
 		<main>
 			<div class="banner"> 
-				<h1 class="banner-block">Creating the Future</h1>
-				<p>our new experince. your new friend</p>
-				<a href="#">learn more</a>
-
+				<div class="banner-block">
+					<h1>Creating the Future</h1>
+					<p class="subtitle">our new experince. your new friend</p>
+					<a href="#" class="learn-more">learn more</a>
+				</div>
+			</div>
+			<div class="wrapper">
 				<div class="articles">	
 						<h2>Sports Car</h2>
 						<p class="quote">What is a sports car? A car may be a sporting automobile without being a sports car. </p>
@@ -44,10 +49,12 @@
 						<p class="text">Over the years, some manufacturers of sports cars have sought to increase the practicality of their vehicles by increasing the seating room. One method is to place the driver's seat in the center of the car, which allows two full-sized passenger seats on each side and slightly behind the driver. The arrangement was originally considered for the Lamborghini Miura, but abandoned as impractical because of the difficulty for the driver to enter/exit the vehicle. McLaren used the design in their F1.</p>
 				</div>
 				
+			
 			</div>
 		</main>
 		<footer class="page-footer">
-			<div class="footer-col">
+			<div class="wrapper">
+				<div class="footer-col">
 				<h3>About</h3>
 				<ul>
 					<li>Privacy Policy</li>
@@ -75,12 +82,13 @@
 			<div class="footer-col">
 				<h3>Social</h3>
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li><a href="" class="fb"></a></li>
+					<li><a href="" class="tw"></a></li>
+					<li><a href="" class="gp"></a></li>
 				</ul>
 			</div>
-			<p>© 2017. ExotiCar. All Rights Reserved</p>
+			<p class="copy">© 2017. ExotiCar. All Rights Reserved</p>
+			</div>
 			
 		</footer>
 
